# runform

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  security-insights.yml  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_bug_report.md
.github/workflows/: ci.yml  codeql-pr-dev.yml  codeql.yml  docs-verify.yml  docs.yml  release.yml  scorecard.yml
configs/evals/: intent_system_v1.json  intent_system_v1.yaml  intent_system_v1_baseline.json
configs/evals/fixtures/: retrieval_proof_cases.json  sample_run.manifest.json
configs/policy/: compile_tools.rego  compile_tools_prod.rego
configs/slo/: operator_alert_contract.v1.json  reliability_scoreboard_targets.json
configs/validation/: validator_bindings.example.yaml  validator_bindings.v1.yaml
deploy/: Dockerfile.autopilot  Dockerfile.ci-pytest  README.md  docker-pytest-ci-requirements.txt
deploy/ci/: github-actions-living-recompile.example.yml
deploy/compose/: docker-compose.autopilot.yml
deploy/kubernetes/: autopilot-deployment.yaml
deploy/systemd/: akc-runtime-autopilot.env.example  akc-runtime-autopilot.service
docs/: akc-alignment.md  akc-vision.md  architecture.md  artifact-contracts.md  cli-commands.md  compile-skills.md  configuration.md  contributing.md  coordination-semantics.md  delivery-architecture.md  environment-model.md  existing_codebase_deep_research.md.resolved.plan.md  getting-started.md  index.md  ir-schema.md  ops-runbook.md  oss-direction-memo.md  oss-evidence-map.md  oss-security-requirements.md  release-signing.md  research.md  runtime-execution.md  security.md  validation.md  viewer-trust-boundary.md  viewer.md
docs/observability/: logging_schema.md
examples/: __init__.py
examples/llm_backends/: __init__.py  http_llm_backend.py
examples/openapi/: petstore.json
examples/wasm/: README.md  hello_preview1.wat  spam_stdout_preview1.wat
formal/dafny/: budget_policy.dfy
formal/verus/: Cargo.toml
formal/verus/src/: lib.rs
rust/: Cargo.toml
rust/crates/akc_executor/: Cargo.toml
rust/crates/akc_executor/src/: env_policy.rs  error.rs  fs_policy.rs  lib.rs  util.rs  windows_job.rs
rust/crates/akc_executor/src/backend/: mod.rs  wasm.rs
rust/crates/akc_executor/src/backend/process/: bwrap.rs  limits.rs  mod.rs  native.rs
rust/crates/akc_executor/tests/: tenant_isolation.rs  wasm_lane.rs
rust/crates/akc_ingest/: Cargo.toml
rust/crates/akc_ingest/src/: lib.rs
rust/crates/akc_ingest/tests/: cli_jsonl_docs.rs  cli_jsonl_messaging_api.rs
rust/crates/akc_protocol/: Cargo.toml
rust/crates/akc_protocol/src/: lib.rs  observability.rs
rust/crates/akc_rust/: Cargo.toml
rust/crates/akc_rust/src/: lib.rs
rust/supply-chain/: audits.toml  config.toml
scripts/: check_benchmark_evidence_gate.py  check_ragas_retrieval_metrics.py  check_reliability_slo_gate.py  check_retrieval_proof_gate.py  ci_policy_test.py
src/: akc_rust.pyi
src/akc/: __init__.py  cli.py  pass_registry.py  path_security.py  promotion.py  validation.py
src/akc/action/: __init__.py  approvals.py  channel_adapters.py  executor.py  models.py  (+6 more)
tests/: __init__.py
tests/e2e/: test_eval_end_to_end.py
tests/integration/: knowledge_domain_coverage_registry.py  test_artifact_pass_order_and_hashes.py  test_cli_compile_docs.py  test_cli_ingest_codebase.py  test_cli_ingest_docs.py  test_cli_ingest_openapi.py  test_compile_coordination_emit_phase4.py  test_compile_operational_verifier_accounting.py  test_compile_runtime_handoff.py  test_compile_runtime_live_mutation_gate.py  test_compile_scoped_apply_realization.py  test_compile_skills_cli.py  test_control_forensics_export.py  test_control_playbook_run.py  test_control_policy_bundle_lifecycle.py  test_control_replay_plan.py  test_coordination_handoff_kernel.py  test_coordination_plan_v1_v2_parity.py  test_delivery_distribution_and_gate.py  test_delivery_plan_compile_pipeline.py  test_deployment_handoff_intent_parity.py  test_developer_role_profile_env_file_precedence.py  test_docker_runtime_hardening.py  test_emerging_profile_one_command_flow.py  test_ingest_assertion_index_breadth.py  test_knowledge_doc_derived_surface_mode.py  test_knowledge_ingest_index_extract_ir_policy.py  test_knowledge_mediation_phase2.py  test_knowledge_openapi_ingest_index_extract_ir_policy.py  test_knowledge_phase3_handoff.py  test_knowledge_phase4_observability.py  test_manifest_replay_mandate_parity.py  test_mcp_ingest_stdio.py  test_operational_evidence_rollup_rolling_ms.py  test_partial_replay_missing_artifacts.py  test_reconciler_ir_deploy_membership.py  test_runtime_artifact_invariants.py  test_runtime_autopilot_lease_single_writer.py  test_runtime_autopilot_phase_e.py  test_runtime_e2e_adapter_fallback.py  (+10 more)
tests/unit/: test_action_executor.py  test_action_planner.py  test_action_provider_registry.py  test_action_routing.py  test_akc_init.py  test_artifact_consistency.py  test_artifact_passes.py  test_artifact_schemas.py  test_assertion_index_store.py  test_autopilot_observability_artifacts.py  test_autopilot_slo_gate.py  test_benchmark_evidence_gate.py  test_change_scope.py  test_chunking.py  test_cli_action.py  test_cli_assistant.py  test_cli_compile.py  test_cli_compile_intent.py  test_cli_control.py  test_cli_deliver.py  test_cli_eval.py  test_cli_fleet.py  test_cli_ingest_profile.py  test_cli_metrics.py  test_cli_module_entry.py  test_cli_runtime.py  test_compile_apply_attestation.py  test_compile_controller_tiered.py  test_compile_executors.py  test_compile_mcp_adapter.py  test_compile_repair_policy.py  test_compile_retriever_index.py  test_compile_session.py  test_compile_session_end_to_end_light.py  test_compile_skills.py  test_compile_verifier_unit.py  test_control_bot_cli.py  test_control_bot_ingress_auth.py  test_control_bot_outbound_adapters.py  test_control_bot_subsystem.py  (+120 more)
tools/nuitka/: __init__.py  build.py  nuitka_includes.py
(+392 files in other folders)
