[project]
name = "akc"
version = "0.1.0"
description = "Agentic Knowledge Compiler — turn messy real-world information into executable knowledge"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "The Agentic Knowledge Compiler contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jsonschema>=4.22",
    # Used by compile MCP adapter (AnyUrl) and other typed surfaces; must be core so
    # minimal images (`uv sync` without extras) still import the compile stack.
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    # Supply-chain hardening: dependency vulnerability scanning gate in CI.
    "pip-audit>=2.7",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-jsonschema>=4.22.0.0",
    "types-PyYAML>=6.0.0.0",
    "PyYAML>=6.0",
    "python-semantic-release>=9.8",
]

# Ingestion extras (Phase 1)
#
# Keep core `akc` dependency-free; ingestion connectors/backends can be installed
# selectively via `uv sync --extra <name>`.
ingest-docs = [
    # Optional higher-fidelity parsing (not required for the stdlib-based connector)
    "markdown-it-py>=3.0",
    "beautifulsoup4>=4.12",
]
ingest-openapi = [
    # YAML support for OpenAPI specs (JSON works without extras)
    "PyYAML>=6.0",
]
ingest-embed = [
    # Optional HTTP client for embedding providers (stdlib fallback exists)
    "httpx>=0.27",
]
ingest-vectorstore = [
    # Optional persistent vector store backend(s)
    "chromadb>=0.5",
]
ingest-messaging = [
    # Optional official Slack SDK (stdlib HTTP fallback exists)
    "slack-sdk>=3.27",
]
ingest-mcp = [
    # Official Model Context Protocol Python SDK (stdio + streamable HTTP client)
    "mcp>=1.2.0",
    "httpx>=0.27",
]
# MCP host integration: ``akc mcp serve`` (FastMCP server; same ``mcp`` wheel as ingest-mcp)
mcp-serve = [
    "mcp>=1.2.0",
]
ingest-all = [
    "akc[ingest-docs,ingest-openapi,ingest-embed,ingest-vectorstore,ingest-messaging,ingest-mcp,mcp-serve]",
]

# Optional vector store backends
vectorstore-pg = [
    "psycopg[binary]>=3.2",
    "pgvector>=0.4",
]

# Provider HTTP / signing for ``akc deliver`` (App Store Connect ES256 JWT, Google OAuth).
delivery-providers = [
    "PyJWT[crypto]>=2.8.0",
    "google-auth>=2.29.0",
]
[project.scripts]
akc = "akc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akc"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"src/akc/coordination/static/coordination_sdk.ts" = "akc/coordination/static/coordination_sdk.ts"
"src/akc/coordination/schemas/agent_coordination_spec.v1.schema.json" = "akc/coordination/schemas/agent_coordination_spec.v1.schema.json"
"src/akc/control/operator_dashboard/index.html" = "akc/control/operator_dashboard/index.html"
"src/akc/control/operator_dashboard/app.js" = "akc/control/operator_dashboard/app.js"
"src/akc/control/operator_dashboard/README.md" = "akc/control/operator_dashboard/README.md"
"src/akc/cli/compile_tools_policy_stub.rego" = "akc/cli/compile_tools_policy_stub.rego"
"src/akc/viewer/static/index.html" = "akc/viewer/static/index.html"
"src/akc/viewer/static/viewer.css" = "akc/viewer/static/viewer.css"
"src/akc/viewer/static/viewer.js" = "akc/viewer/static/viewer.js"
# Bundled Agent Skills default (explicit so wheels/sdists always ship SKILL.md with the package).
"src/akc/compile/skills/bundled/akc_default/SKILL.md" = "akc/compile/skills/bundled/akc_default/SKILL.md"

[tool.hatch.build.targets.sdist]
include = ["src/akc"]

# Ruff: lint + format
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["ARG001"]  # unused function argument (allow for public API signatures)

[tool.ruff.lint.isort]
known-first-party = ["akc"]

[tool.ruff.format]
quote-style = "double"

# mypy
[tool.mypy]
python_version = "3.11"
strict = true
implicit_reexport = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
packages = ["akc"]

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/akc"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "uv build"
upload_to_pypi = false
upload_to_release = true
commit_author = "github-actions <github-actions@github.com>"
