[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
pyo3 = { version = "0.22", features = ["extension-module"] }
wasmtime = "26"
wasmtime-wasi = "33"

[workspace.metadata.vet]
# Store Cargo Vet data under `rust/` so it ships with the Rust subsystem.
store = { path = './supply-chain' }
